Thu Jan 31 19:18:37 2002  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.{h cpp}: To avoid race condition at shutdown time,
          moved the call to report_status(SERVICE_STOPPED, 0) from the
          open() method to a new override of the fini() method. Setting
          status to SERVICE_STOPPED frees up Windows to do its own shutdown
          for the service, and that can't be allowed to commence until all
          ACE_NT_Service things are done. Thanks to Zoran Cetusic
          <ZoranC@inter-intelli.com>, Patrick Bennett and Felix Wyss from
          Interactive Intelligence, Inc. for diagnosing this problem and
          sending in a fix.

        * THANKS: Added Zoran Cetusic, Patrick Bennett, and Felix Wyss to
          the Hall of Fame.

Thu Jan 31 17:00:52 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/config-all.h: Need to include <new> with all versions of
	  SunCC compiler and not just CC 5.0, when the compiler is using
	  compat mode 4. 
	* ace/config-sunos5.6.h: Need to define ACE_LACKS_ACE_IOSTREAM
	  when higher versions of CC are used with compat mode 4 and
	  such. 

	  Thanks to Tim Rydell <tim.rydell@gd-ais.com> for the fixes.

	* THANKS: Added Tim Rydell to the hall of fame.

Thu Jan 31 17:21:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Trace.cpp (constructor and destructor): Do not attempt
          trace output if ACE has not been initialized. There is too
          much not set up yet to bother trying. If you are on a platform
          with ACE_HAS_NONSTATIC_OBJECT_MANAGER (such as Windows) and you
          really, really need tracing in static objects, you should
          try #define ACE_HAS_NONSTATIC_OBJECT_MANAGER 0  in your config.h
          along with #define ACE_NTRACE 0.  Beware, though, there are
          crocodiles lurking there - platforms defined to use non-static
          object manager are that way for good reason.
